# sqlx-not-null

./: Cargo.toml  README.md
migrations/: 20240318172030_create_table.sql  20240318174810_alter_table.sql
src/: main.rs
