[package]
name = "sqlx-not-null"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.36.0"
features = [
	"rt",
	"macros",
	"rt-multi-thread"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "0.7.4"
features = [
	"postgres",
	"runtime-tokio",
]
